--- a/profile/hardcode.html
+++ b/profile/hardcode.html
@@ -8,8 +8,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="icon" type="image/x-icon" href="/images/ninjaverselogo.png">
     <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
-    <script type="module" defer src="../script/general.mjs"></script>
-    <script type="module" defer src="/script/profile.mjs"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.8/umd/popper.min.js" integrity="sha512-TPh2Oxlg1zp+kz3nFA0C5vVC6leG/6mm1z9+mA81MI5eaUVqasPLO8Cuk4gMF4gUfP5etR73rgU/8PNMsSesoQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>Profile</title>
@@ -56,28 +54,26 @@
                 <h1 class="border-bottom">Profile</h1>
                 <div class="container row">
                     <div class="container my-5 d-flex flex-column align-items-center col-md-10 col-sm-12">
-                        <div id="profileheader" class="container d-flex flex-column align-items-center"> <!--Live Data-->
                         <img src="../images/avalancheninja-profile-purple.png" alt="profile picture" class="img-thumbnail bg-dark col-md-6 col-sm-10">
                         <h2 class="mt-3">AvalancheNinja</h2>
-                        </div>
                         <div class="mt-3">
-                        <button id="followbtn" class="btn btn-primary">Follow</button>
+                        <button class="btn btn-primary">Follow</button>
                         </div>
                     </div>
                     <div class="container d-flex align-items-center my-5 flex-column col-md-2">
-                        <ul id="followerscontainer" class="list-group">
+                        <ul class="list-group">
                             <h3>Followers</h3>
                             <li class="list-group-item text-bg-dark text-center">Follower</li>
                             <li class="list-group-item text-bg-dark text-center">Follower</li>
                             <li class="list-group-item text-bg-dark text-center">Follower</li>
                         </ul>
-                        <button id="morefollowersbtn" action="#" class="btn btn-subtle mt-2">See more</button>
+                        <button action="#" class="btn btn-subtle mt-2">See more</button>
                     </div>
                 </div>
             </section>
             <section class="container mt-3">
                 <h3>Information</h3>
-                <div id="informationcontainer" class="card"> <!--Live Data-->
+                <div class="card">
                     <div class="card-body">
                       <p class="card-text">A describing text about the user.</p>
                     </div>
@@ -86,12 +82,11 @@
                       <li class="list-group-item">Country</li>
                       <li class="list-group-item">Something else</li>
                     </ul>
-                </div>
-                <button id="editprofilebtn" class="btn btn-primary mt-3">Edit profile</button>
+                  </div>
+                <button class="btn btn-primary mt-3">Edit profile</button>
             </section>
             <section class="container mt-6 d-flex flex-column align-items-center gap-4">
                 <h3>Posts</h3>
-                <div id="postscontainer" class="container mt-6 d-flex flex-column align-items-center gap-4"> <!--Live Data-->
                 <div class="card col-md-9 col-12">
                     <div class="card-body">
                       <h5 class="card-title">New post</h5>
@@ -115,10 +110,9 @@
                       <p class="card-text">The text that is written in the post</p>
                       <button  class="btn btn-primary">Go to post</button>
                     </div>
-                </div>
                 </div>
                 <div class="mb-5">
-                <button id="morepostsbutton" class="btn btn-primary">Show more</button>
+                <button class="btn btn-primary">Show more</button>
                 </div>
             </section>
         </section>
