Added update and delete feature to the feed. Cleaned some code and made some UI/UX improvemenets. Added JSDoc to some functions.

--- a/profile/index.html
+++ b/profile/index.html
@@ -77,15 +77,10 @@
             </section>
             <section class="container mt-3">
                 <h3>Information</h3>
-                <div id="informationcontainer" class="card"> <!--Live Data-->
-                    <div class="card-body">
+                <div class="card"> <!--Live Data-->
+                    <div id="informationcontainer" class="card-body">
                       <p class="card-text">A describing text about the user.</p>
                     </div>
-                    <ul class="list-group list-group-flush">
-                      <li class="list-group-item">Occupation</li>
-                      <li class="list-group-item">Country</li>
-                      <li class="list-group-item">Something else</li>
-                    </ul>
                 </div>
                 <button id="editprofilebtn" class="btn btn-primary mt-3">Edit profile</button>
             </section>
