--- a/profile/hardcode.html
+++ b/profile/hardcode.html
@@ -54,7 +54,7 @@
                 <h1 class="border-bottom">Profile</h1>
                 <div class="container row">
                     <div class="container my-5 d-flex flex-column align-items-center col-md-10 col-sm-12">
-                        <img src="../images/avalancheninja-profile-purple.png" alt="profile picture" class="img-thumbnail bg-dark col-md-6 col-sm-10">
+                        <img src="https://i.ibb.co/DzcJcCL/avalancheninja-logo-purple.png" alt="profile picture" class="img-thumbnail bg-dark col-md-6 col-sm-10">
                         <h2 class="mt-3">AvalancheNinja</h2>
                         <div class="mt-3">
                         <button class="btn btn-primary">Follow</button>
