Added loading animation while awaiting fetch promise. Added wider profile functionalities. Hide edit button when not on own profile. Cleaned some clutter.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <form id="login" class="row g-3 col-7">
                     <div class="col-12">
                       <label for="email-login" class="form-label">Email</label>
-                      <input name="email" type="email" class="form-control" id="email-login" required title="The email you entered is not correct" pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$">
+                      <input name="email" type="email" class="form-control" id="email-login" required title="The email you entered is not correct" pattern=".+@.+\..{2,4}">
                     </div>
                     <div class="col-12">
                       <label for="password-login" class="form-label">Password</label>
