--- a/signup/index.html
+++ b/signup/index.html
@@ -19,7 +19,7 @@
     <header class="bg-dark text-bg-dark">
         <nav class="navbar fixed-top" data-bs-theme="dark">
           <div class="container-fluid">
-              <a class="navbar-brand" href="/feed/index.html"><img src="/images/ninjaverselogo.png" alt="Logo" width="50" class="d-inline-block">NinjaVerse</a>
+              <a class="navbar-brand" href="/index.html"><img src="/images/ninjaverselogo.png" alt="Logo" width="50" class="d-inline-block">NinjaVerse</a>
           </div>
         </nav>
     </header>  
