--- a/feed/index.html
+++ b/feed/index.html
@@ -82,18 +82,31 @@
         <section class="container mt-6 d-flex flex-column gap-5 justify-content-center align-items-center">
             <h2>Posts</h2>
               <div class="dropdown">
-                <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <button id="sortbtn" class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Sort by
                 </button>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="#">Name</a></li>
-                  <li><a class="dropdown-item" href="#">Date</a></li>
+                  <li><a class="dropdown-item" href="#">Created</a></li>
                   <li><a class="dropdown-item" href="#">Tags</a></li>
                 </ul>
               </div>
         </section>
         <section class="postscontainer container mt-6 d-flex flex-column gap-5 justify-content-center align-items-center">
-          
+
+          <div class="loadingcontainer">
+            <div class="loading-screen">
+              <div class="ninja-face">
+                  <div class="ninja-eyes">
+                      <div class="eye left-eye"></div>
+                      <div class="eye right-eye"></div>
+                  </div>
+                  <div class="ninja-mask"></div>
+              </div>
+              <p class="loading-text">Loading...</p>
+            </div>
+          </div>
+
         </section>
         <div class="container mt-4 col-sm-1">
           <button id="showmorebtn" class="btn btn-primary">Show more</button>
