--- a/profile/index.html
+++ b/profile/index.html
@@ -57,8 +57,20 @@
                 <div class="container row">
                     <div class="container my-5 d-flex flex-column align-items-center col-md-10 col-sm-12">
                         <div id="profileheader" class="container d-flex flex-column align-items-center"> <!--Live Data-->
-                        <img src="../images/avalancheninja-profile-purple.png" alt="profile picture" class="img-thumbnail bg-dark col-md-6 col-sm-10">
-                        <h2 class="mt-3">AvalancheNinja</h2>
+                          
+                          <div class="loadingcontainer">
+                            <div class="loading-screen">
+                              <div class="ninja-face">
+                                  <div class="ninja-eyes">
+                                      <div class="eye left-eye"></div>
+                                      <div class="eye right-eye"></div>
+                                  </div>
+                                  <div class="ninja-mask"></div>
+                              </div>
+                              <p class="loading-text">Loading...</p>
+                            </div>
+                          </div>
+
                         </div>
                         <div class="mt-3">
                         <button id="followbtn" class="btn btn-primary">Follow</button>
@@ -77,12 +89,8 @@
             </section>
             <section class="container mt-3">
                 <h3>Information</h3>
-                <div class="card"> <!--Live Data-->
-                    <div id="informationcontainer" class="card-body">
-                      <p class="card-text">A describing text about the user.</p>
-                    </div>
+                <div id="informationcontainer"  class="card"> <!--Live Data-->
                 </div>
-                <button id="editprofilebtn" class="btn btn-primary mt-3">Edit profile</button>
             </section>
             <section class="container mt-6 d-flex flex-column align-items-center gap-4">
                 <h3>Posts</h3>
